Componente Curriculum terminado

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
-<!-- Contact Section -->
+<!-- Sección Contacto -->
 <section id="contact" class="contact-section section-padding">
     <div class="container">
-        <h2 class="section-title wow fadeInUp">Get in touch</h2>
+        <h2 class="section-title wow fadeInUp">Contacto</h2>
 
         <div class="row">
             <div class="col-md-6">
@@ -69,4 +69,4 @@
     </div>
     <!-- /.container -->
 </section>
-<!-- End Contact Section -->
+<!-- Fin Sección Contacto -->
