--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,30 +1,30 @@
-<!-- Resume Section -->
+<!-- Sección Curriculum -->
 <section id="resume" class="resume-section section-padding">
     <div class="container">
-        <h2 class="section-title wow fadeInUp">Resume</h2>
+        <h2 class="section-title wow fadeInUp">Curriculum</h2>
         <div class="row">
             <div class="col-md-12">
                 <div class="resume-title">
-                    <h3>Education</h3>
+                    <h3>Educación</h3>
                 </div>
                 <div class="resume">
                     <ul class="timeline">
                         <li>
                             <div class="posted-date">
-                                <span class="month">2007-2011</span>
+                                <span class="month">2010-2015</span>
                             </div>
                             <!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
-                                        <h3>Bachelor degree certificate</h3>
-                                        <span>BA(Hons) in UI Engineering, Arts University, Pabna, USA</span>
+                                        <h3>Ingeniería en Electrónica, Especialidad Sistemas Electrónicos Avanzados</h3>
+                                        <span>Instituto Tecnológico de Chihuahua</span>
                                     </div>
                                     <!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>I have completed UI Engineering degree from ABC University, Boston, USA at feel the charm of existence in this spot, which was creat.</p>
+                                        <p>Lleve mis estudios de ingeniería en esta institución del año 2010 al año 2015, donde logré especializarme en Sistemas Electrónicos Avanzados y descubir mi pasión por la programación.</p>
                                     </div>
                                     <!-- /timeline-body -->
                                 </div>
@@ -35,44 +35,20 @@
 
                         <li class="timeline-inverted">
                             <div class="posted-date">
-                                <span class="month">2004-2006</span>
+                                <span class="month">2007-2010</span>
                             </div>
                             <!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
-                                        <h3>Higher Secondary certificate</h3>
-                                        <span>Typography Arts, FA College, New York, USA</span>
+                                        <h3>Técnico en Mecatrónica</h3>
+                                        <span>Centro de Bachillerato Tecnológico Industrial y de Servicios #122, Chihuahua, Chihuahua.</span>
                                     </div>
                                     <!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>From this college of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
-                                    </div>
-                                    <!-- /timeline-body -->
-                                </div>
-                                <!-- /timeline-content -->
-                            </div>
-                            <!-- /timeline-panel -->
-                        </li>
-
-                        <li>
-                            <div class="posted-date">
-                                <span class="month">2000-2003</span>
-                            </div>
-                            <!-- /posted-date -->
-
-                            <div class="timeline-panel wow fadeInUp">
-                                <div class="timeline-content">
-                                    <div class="timeline-heading">
-                                        <h3>Secondary school certificate</h3>
-                                        <span>Creative Arts, Julius Jr. school, USA</span>
-                                    </div>
-                                    <!-- /timeline-heading -->
-
-                                    <div class="timeline-body">
-                                        <p>I was awesome at arts, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy.</p>
+                                        <p>Mientras conseguía mi titulo de Técnico en Mecatrónica tuve mi primer acercamiento con la programación en algunas materias que lleve en mi formación.</p>
                                     </div>
                                     <!-- /timeline-body -->
                                 </div>
@@ -89,26 +65,30 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="resume-title">
-                    <h3>Experience</h3>
+                    <h3>Experiencia laboral</h3>
                 </div>
                 <div class="resume">
                     <ul class="timeline">
-                        <li class="timeline-inverted">
+                        <li>
                             <div class="posted-date">
-                                <span class="month">2011-2013</span>
+                                <span class="month">Enero 2018 - Diciembre 2018</span>
                             </div>
                             <!-- /posted-date -->
+
+                            <!-- Trabajo de desarrollador Freelance -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
-                                        <h3>Junior ui designer</h3>
-                                        <span>XYZ Design Home, One Street, Boston</span>
+                                        <h3>Desarrollador web Freelance</h3>
+                                        <span>Chihuahua, Chihuahua</span>
                                     </div>
                                     <!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
+                                        <p>Desarrollo de un sistema para un consultorio de nutrición, la aplicación se encarga de guardar los datos del paciente al ser registrado, y cada visita se guardan sus avances, de esta manera se lleva un mejor manejo
+                                            de usuarios. La aplicación también cuenta con un módulo para la creación de los archivos de planes alimenticios, de esta manera el nutriólogo puede realizarlos en un menor tiempo. Este desarrollo fue realizado
+                                            con las siguientes tecnologías: C#, ASP.net, HTML5, Javascript, XML, SQL Server, ReportViewer..</p>
                                     </div>
                                     <!-- /timeline-body -->
                                 </div>
@@ -117,22 +97,108 @@
                             <!-- /timeline-panel -->
                         </li>
 
-                        <li>
+                        <!-- Trabajo de Cactus Trafficc -->
+
+                        <li class="timeline-inverted">
                             <div class="posted-date">
-                                <span class="month">2013-2015</span>
+                                <span class="month">Septiembre 2017 - Octubre 2017</span>
                             </div>
                             <!-- /posted-date -->
 
                             <div class="timeline-panel wow fadeInUp">
                                 <div class="timeline-content">
                                     <div class="timeline-heading">
-                                        <h3>Lead UX Consultant</h3>
-                                        <span>Lucky8 Designing Firm, California</span>
+                                        <h3>Ingeniero Electrónico</h3>
+                                        <span>Cactus, Traffic, Chihuahua, Chihuahua</span>
                                     </div>
                                     <!-- /timeline-heading -->
 
                                     <div class="timeline-body">
-                                        <p>Completely provide access to seamless manufactured products before functionalized synergy. Progressively redefine competitive.</p>
+                                        <p>Encargado del área de innovación de la empresa. Se continuó con el desarrollo de un controlador de semáforos desarrollado por la empresa. Donde se implementó la mejora de la etapa de potencia del controlador. También
+                                            se mejoró el software hecho para manipular el controlador pasándolo de un lenguaje VB6 a VB .NET dándole con esto una mejora en estructura de código y una visualización más amigable para el usuario. Para hacer
+                                            esto se utilizó el software Visual Studio 2015 y Microsoft Access.</p>
+                                    </div>
+                                    <!-- /timeline-body -->
+                                </div>
+                                <!-- /timeline-content -->
+                            </div>
+                            <!-- /timeline-panel -->
+                        </li>
+
+                        <!-- Trabajo de The Warranty Group -->
+
+                        <li>
+                            <div class="posted-date">
+                                <span class="month">Septiembre 2017 - Octubre 2017</span>
+                            </div>
+                            <!-- /posted-date -->
+
+                            <div class="timeline-panel wow fadeInUp">
+                                <div class="timeline-content">
+                                    <div class="timeline-heading">
+                                        <h3>Desarrollador .NET</h3>
+                                        <span>The Warranty Group, Ciudad de México</span>
+                                    </div>
+                                    <!-- /timeline-heading -->
+
+                                    <div class="timeline-body">
+                                        <p>Encargado de desarrollar aplicaciones web según sean los requerimientos del usuario, se desarrollaron varios sistemas para las empresas que se ligan con la compañía, así como agregar módulos a aplicaciones ya hechas,
+                                            algunos de los proyectos en los que participe fue, el agregar módulos de ventas a una página web de Honda Chile, la creación de un sistema web interno para dar de alta y seguimiento a las quejas de los usuarios,
+                                            donde se desarrolló desde la base de datos hasta los reportes que se generaran. Las tecnologías utilizadas en estos proyectos son programación C#, ASP.net, MVC, HTML5, JQuery, SQL Server, CrystalReports, ReportViewer.</p>
+                                    </div>
+                                    <!-- /timeline-body -->
+                                </div>
+                                <!-- /timeline-content -->
+                            </div>
+                            <!-- /timeline-panel -->
+                        </li>
+
+                        <!-- Trabajo de Visteon -->
+
+                        <li class="timeline-inverted">
+                            <div class="posted-date">
+                                <span class="month">Agosto 2015 - Enero 2016</span>
+                            </div>
+                            <!-- /posted-date -->
+
+                            <div class="timeline-panel wow fadeInUp">
+                                <div class="timeline-content">
+                                    <div class="timeline-heading">
+                                        <h3>Practicante de Electrónica</h3>
+                                        <span>Visteon Technical Center, Chihuahua, Chihuahua</span>
+                                    </div>
+                                    <!-- /timeline-heading -->
+
+                                    <div class="timeline-body">
+                                        <p>Desarrollo de una interfaz de comunicación CAN para interactuar con los diferentes módulos de los vehículos como Clusters, Radios y Pantallas, la interfaz está desarrollada en lenguaje C utilizando el entorno de
+                                            desarrollo CVI/Labwindows.</p>
+                                    </div>
+                                    <!-- /timeline-body -->
+                                </div>
+                                <!-- /timeline-content -->
+                            </div>
+                            <!-- /timeline-panel -->
+                        </li>
+
+                        <!-- Trabajo de PVR -->
+
+                        <li>
+                            <div class="posted-date">
+                                <span class="month">Marzo 2015 - Agosto 2016</span>
+                            </div>
+                            <!-- /posted-date -->
+
+                            <div class="timeline-panel wow fadeInUp">
+                                <div class="timeline-content">
+                                    <div class="timeline-heading">
+                                        <h3>Desarrollador .NET</h3>
+                                        <span>Centro de Percepción visual y robótica, Chihuahua, Chihuahua</span>
+                                    </div>
+                                    <!-- /timeline-heading -->
+
+                                    <div class="timeline-body">
+                                        <p>Desarrollo de diversas aplicaciones que simulan terapias mediante el uso de la tecnología Kinect para los niños de los centros de atención múltiple de la ciudad de Chihuahua desarrolladas mediante el lenguaje de
+                                            programación C#, ASP.net, MVC, WPF, HTML5, JQuery, XML, XSL, SQL Server.</p>
                                     </div>
                                     <!-- /timeline-body -->
                                 </div>
@@ -148,4 +214,4 @@
     </div>
     <!-- /.container -->
 </section>
-<!-- End Resume Section -->
+<!-- Fin Sección Curriculum -->
