--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,7 +1,7 @@
-<!-- Works Section -->
+<!-- Sección Portafolio -->
 <section id="works" class="works-section section-padding">
     <div class="container">
-        <h2 class="section-title wow fadeInUp">Works</h2>
+        <h2 class="section-title wow fadeInUp">Portafolio</h2>
 
         <ul class="list-inline" id="filter">
             <li><a class="active" data-group="all">All</a></li>
@@ -182,4 +182,4 @@
     </div>
     <!-- /.container -->
 </section>
-<!-- End Works Section -->
+<!-- Fin Sección Portafolio -->
