--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,7 +1,7 @@
-<!-- Skills Section -->
+<!-- Sección habilidades -->
 <section id="skills" class="skills-section section-padding">
     <div class="container">
-        <h2 class="section-title wow fadeInUp">Skills</h2>
+        <h2 class="section-title wow fadeInUp">Habilidades</h2>
 
         <div class="row">
             <div class="col-md-6">
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="3498db">
+                <div class="chart" data-percent="68" data-color="2dccdc">
                     <span class="percent"></span>
                     <div class="chart-text">
                         <span>Management</span>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="3498db">
+                <div class="chart" data-percent="68" data-color="fff">
                     <span class="percent"></span>
                     <div class="chart-text">
                         <span>Branding</span>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="3498db">
+                <div class="chart" data-percent="68" data-color="2dccdc">
                     <span class="percent"></span>
                     <div class="chart-text">
                         <span>Marketing</span>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="3498db">
+                <div class="chart" data-percent="68" data-color="2dccdc">
                     <span class="percent"></span>
                     <div class="chart-text">
                         <span>Motivation</span>
@@ -139,4 +139,4 @@
     </div>
     <!-- /.container -->
 </section>
-<!-- End Skills Section -->
+<!-- Fin Sección Habilidades -->
