--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -3,14 +3,48 @@
     <div class="container">
         <h2 class="section-title wow fadeInUp">Habilidades</h2>
 
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/c.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/c-plus-plus.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/c-sharp.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/puntonet.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/angular.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/nodejs.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/visualstudio.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/html5.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/css3.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/arduino.png"></figure>
+        </a>
+        <a class="column col-xs-6" id="zoomIn">
+            <figure><img src="../../../assets/images/icon/github.png"></figure>
+        </a>
+
         <div class="row">
             <div class="col-md-6">
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>UX Design</h3>
+                        <h3>Lenguaje C</h3>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"><span>95%</span>
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                         </div>
                     </div>
                     <!-- /.progress -->
@@ -19,7 +53,7 @@
 
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>Visual Design</h3>
+                        <h3>Lenguaje C++</h3>
                     </div>
                     <div class="progress">
                         <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
@@ -30,10 +64,10 @@
                 <!-- /.skill-progress -->
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>Business Design</h3>
+                        <h3>Lenguaje C#</h3>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>75%</span>
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"><span>85%</span>
                         </div>
                     </div>
                     <!-- /.progress -->
@@ -45,10 +79,10 @@
             <div class="col-md-6">
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>Branding Design</h3>
+                        <h3>Angular 7+</h3>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"><span>95%</span>
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"><span>60%</span>
                         </div>
                     </div>
                     <!-- /.progress -->
@@ -56,7 +90,33 @@
                 <!-- /.skill-progress -->
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>Motion Graphic</h3>
+                        <h3>Node JS</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span>50%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>Ionic</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><span>50%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+            </div>
+            <!-- /.col-md-6 -->
+
+            <div class="col-md-6">
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>.NET</h3>
                     </div>
                     <div class="progress">
                         <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
@@ -67,10 +127,21 @@
                 <!-- /.skill-progress -->
                 <div class="skill-progress">
                     <div class="skill-title">
-                        <h3>Flyers Designing</h3>
+                        <h3>SQL Server</h3>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span>75%</span>
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><span>70%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
                         </div>
                     </div>
                     <!-- /.progress -->
@@ -78,59 +149,98 @@
                 <!-- /.skill-progress -->
             </div>
             <!-- /.col-md-6 -->
+
+
+            <div class="col-md-6">
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>GIT</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>ReportViewer</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+                <div class="skill-progress">
+                    <div class="skill-title">
+                        <h3>Arduino</h3>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span>80%</span>
+                        </div>
+                    </div>
+                    <!-- /.progress -->
+                </div>
+                <!-- /.skill-progress -->
+            </div>
         </div>
         <!-- /.row -->
 
+        <!-- /.col-md-6 -->
+
         <div class="skill-chart text-center">
-            <h3>More skills</h3>
+            <h3>Aptitudes</h3>
         </div>
 
         <div class="row more-skill text-center">
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="91" data-color="e74c3c">
+                <div class="chart" data-percent="100" data-color="e74c3c">
                     <span class="percent"></span>
                     <div class="chart-text">
-                        <span>leadership</span>
+                        <span>Trabajo en equipo</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="23" data-color="2ecc71">
+                <div class="chart" data-percent="95" data-color="2ecc71">
                     <span class="percent"></span>
                     <div class="chart-text">
-                        <span>Creativity</span>
+                        <span>Trbajo bajo presión</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="2dccdc">
+                <div class="chart" data-percent="100" data-color="2dccdc">
                     <span class="percent"></span>
                     <div class="chart-text">
-                        <span>Management</span>
+                        <span>Autodidacta</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="fff">
+                <div class="chart" data-percent="95" data-color="fff">
                     <span class="percent"></span>
                     <div class="chart-text">
-                        <span>Branding</span>
+                        <span>Pensamiento lógico matematico</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="2dccdc">
+                <div class="chart" data-percent="95" data-color="2dccdc">
+                    <span class="percent"></span>
+                    <div class="chart-text">
+                        <span>Facilidad de aprendizaje</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="chart" data-percent="80" data-color="2dccdc">
                     <span class="percent"></span>
                     <div class="chart-text">
                         <span>Marketing</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-2">
-                <div class="chart" data-percent="68" data-color="2dccdc">
-                    <span class="percent"></span>
-                    <div class="chart-text">
-                        <span>Motivation</span>
                     </div>
                 </div>
             </div>
