--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -8,7 +8,7 @@
             <div class="col-md-4 col-md-push-8">
                 <div class="biography">
                     <div class="myphoto">
-                        <img src="assets/images/myphoto.jpg" alt="">
+                        <img src="assets/images/fototitulo.png" alt="">
                     </div>
                     <ul>
                         <li><strong>Nombre:</strong> Orlando Alejandro Prieto Regalado</li>
@@ -31,26 +31,19 @@
 
                 <div class="short-info wow fadeInUp">
                     <h3>Antecedentes</h3>
-                    <p>I have been working as a web interface designer since. I have a love of clean, elegant styling, and I have lots of experience in the production of CSS3 and HTML5 for modern websites. I loving creating awesome as per my clients’ need.
-                        I think user experience when I try to craft something for my clients. Making a design awesome.</p>
-
-                    <ul class="list-check">
-                        <li>User Experience Design</li>
-                        <li>Interface Design</li>
-                        <li>Product Design</li>
-                        <li>Branding Design</li>
-                        <li>Digital Painting</li>
-                        <li>Video Editing</li>
-                    </ul>
+                    <p>He trabajado como desarrollador web y desarrollo de software para algunas empresas, donde mi desempeño se basa en no solo diseñar páginas y sistemas para facilitar procesos, si no que sean con diseños amigables y estilos elegantes,
+                        pensando en la experiencia del cliente con el producto final. Mi pasión por la programación me lleva a ver estos desarrollos más que como un trabajo como un estilo de vida, ya que es algo que tengo presente en mi día a día, ya
+                        sea desarrollando algo o aprendiendo algo nuevo.
+                    </p>
                 </div>
 
-                <div class="my-signature">
-                    <img src="assets/images/sign.png" alt="">
+                <div class="my-signature fadeInUp">
+                    <img src="assets/images/miFirma.png" alt="" style="width: 200px; height: 60px;">
                 </div>
 
                 <div class="download-button">
                     <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>¡Contactame!</a>
-                    <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-download"></i>Descargar mi CV</a>
+                    <!-- <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-download"></i>Descargar mi CV</a> -->
                 </div>
             </div>
 
