--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,64 +4,38 @@
         <h2 class="section-title wow fadeInUp">Contacto</h2>
 
         <div class="row">
-            <div class="col-md-6">
-                <div class="contact-form">
-                    <strong>Send me a message</strong>
-                    <form name="contact-form" id="contactForm" action="sendemail.php" method="POST">
-
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" name="name" class="form-control" id="name" required="">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" class="form-control" id="email" required="">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="subject">Subject</label>
-                            <input type="text" name="subject" class="form-control" id="subject">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea name="message" class="form-control" id="message" rows="5" required=""></textarea>
-                        </div>
-
-                        <button type="submit" name="submit" class="btn btn-primary">Send Message</button>
-                    </form>
-                </div>
-                <!-- /.contact-form -->
-            </div>
-            <!-- /.col-md-6 -->
-
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="row center-xs">
-                    <div class="col-sm-6">
+                    <div class="col-md-4">
                         <i class="fa fa-map-marker"></i>
                         <address>
-              <strong>Address/Street</strong>
-              239/2 Awesome Street,<br>
-              Boston, USA<br>
-            </address>
+                        <strong>Dirección</strong>
+                        Chihuahua, Chihuahua, México<br>
+                        </address>
                     </div>
 
-                    <div class="col-sm-6">
+                    <div class="col-md-4">
                         <i class="fa fa-mobile"></i>
                         <div class="contact-number">
-                            <strong>Phone Number</strong> (001) 0123 111222<br> (001) 0123 333444
+                            <strong>Número de télefono</strong> 5561 282231<br>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <i class="fa fa-envelope"></i>
+                        <div class="contact-number">
+                            <strong>E-mail</strong> OrlandoPrieto@outlook.es<br> OrlandoPrietoRegalado@gmail.com
                         </div>
                     </div>
                 </div>
 
-                <div class="row">
+                <!--                 <div class="row">
                     <div class="col-sm-12">
                         <div class="location-map">
                             <div id="mapCanvas" class="map-canvas"></div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
