--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -7,6 +7,8 @@
 
 <app-portafolio></app-portafolio>
 
+<app-certified></app-certified>
+
 <app-contact></app-contact>
 <!-- Fin de Componentes -->
 
