--- a/src/app/pages/certified/certified.component.html
+++ b/src/app/pages/certified/certified.component.html
@@ -1,5 +1,5 @@
 <!-- Sección Portafolio -->
-<section id="works" class="works-section section-padding">
+<section id="works" class="works-section">
     <div class="container">
         <h2 class="section-title wow fadeInUp">Cursos y Certificados</h2>
         <div class="row">
