--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -4,27 +4,25 @@
         <h2 class="section-title wow fadeInUp">Portafolio</h2>
 
         <ul class="list-inline" id="filter">
-            <li><a class="active" data-group="all">All</a></li>
-            <li><a data-group="design">Design</a></li>
+            <li><a class="active" data-group="todos">Todos</a></li>
             <li><a data-group="web">Web</a></li>
-            <li><a data-group="interface">Interface</a></li>
-            <li><a data-group="identety">Identity</a></li>
+            <li><a data-group="escritorio">Escritorio</a></li>
         </ul>
 
         <div class="row">
             <div id="grid">
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "interface"]'>
+                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-1.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
+                                <a class="image-link" href="assets/images/works/ayafotografia.jpg"><i class="fa fa-search-plus"></i></a>
+                                <a href="http://ayafotografia.com/"><i class="fa fa-link"></i></a>
                             </div>
                             <!-- /.links -->
-                            <img src="assets/images/works/portfolio-1.jpg" alt="image">
+                            <img src="assets/images/works/ayafotografia.jpg" alt="image">
                             <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
+                                <h3>A&A Fotografía</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
@@ -34,19 +32,37 @@
                 </div>
                 <!-- /.portfolio-item -->
 
+                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "escritorio"]'>
+                    <div class="portfolio-bg">
+                        <div class="portfolio">
+                            <div class="tt-overlay"></div>
+                            <div class="links">
+                                <a class="image-link" href="assets/images/works/inter-v.jpg"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                            <!-- /.links -->
+                            <img src="assets/images/works/inter-v.jpg" alt="image">
+                            <div class="portfolio-info">
+                                <h3>Inter-V Visteon</h3>
+                            </div>
+                            <!-- /.portfolio-info -->
+                        </div>
+                        <!-- /.portfolio -->
+                    </div>
+                    <!-- /.portfolio-bg -->
+                </div>
+                <!-- /.portfolio-item -->
 
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "web"]'>
+                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-2.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
+                                <a class="image-link" href="assets/images/works/sears.jpg"><i class="fa fa-search-plus"></i></a>
                             </div>
                             <!-- /.links -->
-                            <img src="assets/images/works/portfolio-2.jpg" alt="image">
+                            <img src="assets/images/works/sears.jpg" alt="image">
                             <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
+                                <h3>Sears</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
@@ -55,18 +71,18 @@
                     <!-- /.portfolio-bg -->
                 </div>
                 <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "interface"]'>
+                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "web"]'>
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-3.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
+                                <a class="image-link" href="assets/images/works/nutrilev.jpg"><i class="fa fa-search-plus"></i></a>
+                                <a href="http://nutrilevespecializada.com/"><i class="fa fa-link"></i></a>
                             </div>
                             <!-- /.links -->
-                            <img src="assets/images/works/portfolio-3.jpg" alt="image">
+                            <img src="assets/images/works/nutrilev.jpg" alt="image">
                             <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
+                                <h3>Nutrilev Nutrición Especializada</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
@@ -75,18 +91,17 @@
                     <!-- /.portfolio-bg -->
                 </div>
                 <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
+                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["todos", "escritorio"]'>
                     <div class="portfolio-bg">
                         <div class="portfolio">
                             <div class="tt-overlay"></div>
                             <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-4.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
+                                <a class="image-link" href="assets/images/works/terapias.png"><i class="fa fa-search-plus"></i></a>
                             </div>
                             <!-- /.links -->
-                            <img src="assets/images/works/portfolio-4.jpg" alt="image">
+                            <img src="assets/images/works/terapias.png" alt="image">
                             <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
+                                <h3>Terapias CAM</h3>
                             </div>
                             <!-- /.portfolio-info -->
                         </div>
@@ -95,86 +110,7 @@
                     <!-- /.portfolio-bg -->
                 </div>
                 <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-5.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/portfolio-5.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-6.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/portfolio-6.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "web"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-7.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/portfolio-7.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
-                <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "design"]'>
-                    <div class="portfolio-bg">
-                        <div class="portfolio">
-                            <div class="tt-overlay"></div>
-                            <div class="links">
-                                <a class="image-link" href="assets/images/works/portfolio-8.jpg"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-link"></i></a>
-                            </div>
-                            <!-- /.links -->
-                            <img src="assets/images/works/portfolio-8.jpg" alt="image">
-                            <div class="portfolio-info">
-                                <h3>Portfolio Title</h3>
-                            </div>
-                            <!-- /.portfolio-info -->
-                        </div>
-                        <!-- /.portfolio -->
-                    </div>
-                    <!-- /.portfolio-bg -->
-                </div>
-                <!-- /.portfolio-item -->
+
             </div>
             <!-- /#grid -->
         </div>
